syntax = "proto3";

enum CommandType {
  UNSPECIFIED = 0;
  MINT_NFT = 1;
  TRANSFER_NFT = 2;
  CREATE_AMM = 3;
  ADD_LIQUIDITY = 4;
  REMOVE_LIQUIDITY = 5;
  SWAP = 6;
  DEPOSIT_FUNDS = 7;
  WITHDRAW_FUNDS = 8;
};

message Command {
  bytes aggregate_id = 1;
  bytes cmd_signature = 2;
  CommandType cmd_type = 3;
  bytes cmd_payload = 4;
}

message MintNFTPayload {
  bytes hash = 1;
  bytes owner = 2;
}

message TransferNFTPayload {
  bytes hash = 1;
  bytes to = 2;
}

message CreateAMMPayload {
  bytes token1 = 1;
  bytes token2 = 2;

  uint64 token1_balance = 3;
  uint64 token2_balance = 4;
}

message AddLiquidityPayload {
  uint64 amount1 = 1;
  uint64 amount2 = 2;
}

message RemoveLiquidityPayload {
  uint64 share = 1;
}

message SwapTokensPayload {
  uint64 amount1 = 1;
  uint64 amount2 = 2;
}

message DepositFundsPayload {
  uint64 amount1 = 1;
  uint64 amount2 = 2;
}

message WithdrawFundsPayload {
  uint64 amount1 = 1;
  uint64 amount2 = 2;
}